--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,21 @@ body {
 
 header {
     width: 100vw;
+    height: 60px;
     background-color: #72e4da;
     color: white;
-    padding: 10px 0;
+    padding: 20px;
     display: flex;
+    align-items: center;
+    gap: 100px;
+}
+
+.logo {
+    color: rgb(49, 49, 49);
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
 }
 
 header .logo img {
@@ -32,41 +43,44 @@ nav ul li {
 }
 
 nav ul li a {
-    color: rgb(0, 0, 0);
+    color: rgb(36, 36, 36);
     text-decoration: none;
     font-size: 1.3rem;
 }
 
 .banner {
-    background-color: #f4f4f4;
-    padding: 20px;
-    text-align: center;
+    background-color: #e4faf9;
+    width: 100vw;
+    height: 70px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.3rem;
 }
 
 .contenido {
     padding: 20px;
     /* text-align: center; */
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 .contenido article {
     margin-bottom: 20px;
     display: flex;
-    width: 600px;
+    width: 800px;
     height: 200px;
     border: 2px solid rgb(197, 197, 197);
     border-radius: 8px;
     gap: 3%;
-}
-
-.contenedor-img {
-    height: 100%;
-    aspect-ratio: 1/1;
+    padding-right: 2%;
 }
 
 .contenido article img {
-    width: 100%;
+    height: 100%;
     max-width: 100%;    
     justify-content: left;
 }
