--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,8 @@ body {
 }
 
 header {
-    width: 100vw;
+    width: 100%;
+    max-width: 100%;
     height: 60px;
     background-color: #72e4da;
     color: white;
@@ -50,7 +51,8 @@ nav ul li a {
 
 .banner {
     background-color: #e4faf9;
-    width: 100vw;
+    width: 100%;
+    max-width: 100%;
     height: 70px;
     padding: 10px;
     display: flex;
@@ -61,11 +63,11 @@ nav ul li a {
 
 .contenido {
     padding: 20px;
-    /* text-align: center; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    min-height: 60vh;
 }
 
 .contenido article {
@@ -94,6 +96,8 @@ footer {
     color: rgb(0, 0, 0);
     text-align: center;
     padding: 10px 0;
+    width: 100%;
+    max-width: 100%;
 }
 
 .redes-sociales img {
